--- a/src/styles/button.css
+++ b/src/styles/button.css
@@ -2,6 +2,7 @@ button {
 	background-color: var(--color-theme);
 	border: 0;
 	border-radius: 0;
+	color: var(--color-white);
 	cursor: pointer;
 	font-size: 1em;
 	font-weight: 500;
